chore(convention): Better JPMS compat